--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-components",
-  "version": "0.0.1-beta.2",
+  "version": "0.0.1-beta.3",
   "description": "",
   "repository": "Nikhil Saraf/magic-components",
   "license": "MIT",
@@ -12,7 +12,8 @@
   "browser": "dist/magic-components.umd.js",
   "types": "dist/types",
   "files": [
-    "dist"
+    "dist",
+    "babel"
   ],
   "scripts": {
     "build": "klap build -n Magic",
