--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-components",
-  "version": "0.0.1-beta.8",
+  "version": "0.0.1-beta.9",
   "description": "",
   "repository": "Nikhil Saraf/magic-components",
   "license": "MIT",
@@ -10,13 +10,14 @@
   "module": "dist/magic-components.js",
   "source": "src/index.tsx",
   "browser": "dist/magic-components.umd.js",
-  "types": "dist/types",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "babel"
   ],
   "scripts": {
     "build": "klap build -n Magic",
+    "tsdx:build": "npx tsdx build --entry src/index.tsx --tsconfig tsconfig.klap.json",
     "postbuild": "tsc -p tsconfig.klap.json",
     "dev": "browser-sync start --server --files ./**/*.{html,js,ts,tsx} --no-open --no-notify --directory",
     "prepublishOnly": "yarn build",
