--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "klap build -n Magic",
     "tsdx:build": "npx tsdx build --entry src/index.tsx --tsconfig tsconfig.klap.json",
     "postbuild": "tsc -p tsconfig.klap.json",
-    "dev": "browser-sync start --server --files ./**/*.{html,js,ts,tsx} --no-open --no-notify --directory",
+    "dev": "next",
     "prepublishOnly": "yarn build",
     "start": "klap start",
     "watch": "klap watch"
@@ -28,6 +28,7 @@
   "dependencies": {
     "@nksaraf/colors": "^0.0.2",
     "color": "^3.1.2",
+    "deepmerge": "^4.2.2",
     "framer-motion": "^2.0.0-beta.42"
   },
   "devDependencies": {
