--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-components",
-  "version": "0.0.2-beta.9",
+  "version": "0.0.2-beta.11",
   "description": "",
   "repository": "Nikhil Saraf/magic-components",
   "license": "MIT",
@@ -29,7 +29,8 @@
     "@nksaraf/colors": "^0.0.2",
     "color": "^3.1.2",
     "deepmerge": "^4.2.2",
-    "framer-motion": "^2.0.0-beta.42"
+    "framer-motion": "^2.0.0-beta.42",
+    "tiny-css-prefixer": "^1.1.4"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
