--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "magic-components",
-  "version": "0.0.2-beta.22",
+  "version": "0.0.2-beta.23",
   "description": "",
   "repository": "Nikhil Saraf/magic-components",
   "license": "MIT",
   "author": "Nikhil Saraf",
-  "main": "dist/magic-components.cjs.js",
+  "main": "dist/cjs/magic-components.js",
   "unpkg": "dist/magic-components.js",
-  "module": "dist/magic-components.js",
+  "module": "dist/esm/magic-components.js",
   "source": "src/index.tsx",
-  "browser": "dist/magic-components.umd.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "babel"
-  ],
+  "browser": "dist/esm/magic-components.js",
+  "types": "dist/types",
   "scripts": {
-    "build": "klap build -n Magic",
-    "tsdx:build": "npx tsdx build --entry src/index.tsx --tsconfig tsconfig.klap.json",
-    "postbuild": "tsc -p tsconfig.klap.json",
+    "build": "pkger",
     "dev": "next",
     "prepublishOnly": "yarn build",
-    "start": "klap start",
-    "watch": "klap watch"
+    "start": "pkger"
+  },
+  "pkger": {
+    "entries": [
+      {
+        "name": "babel",
+        "target": "node"
+      }
+    ]
   },
   "prettier": {},
   "dependencies": {
@@ -30,7 +31,8 @@
     "color": "^3.1.2",
     "deepmerge": "^4.2.2",
     "framer-motion": "^2.0.0-beta.55",
-    "inline-style-prefixer": "^6.0.0"
+    "inline-style-prefixer": "^6.0.0",
+    "pkger": "^0.0.2-next.13"
   },
   "devDependencies": {
     "@types/color": "^3.0.1",
@@ -38,7 +40,6 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "klap": "4.3.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -48,13 +49,9 @@
     "react": "^16.8",
     "react-dom": "^16.8"
   },
-  "klap": {
-    "example": "public/index.tsx",
-    "globals": {
-      "framer-motion": "Motion",
-      "@nksaraf/colors": "Colors",
-      "react": "React",
-      "deepmerge": "deepmerge"
-    }
-  }
+  "files": [
+    "dist",
+    "babel",
+    "dist/types"
+  ]
 }
