--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-components",
-  "version": "0.0.2-beta.23",
+  "version": "0.0.2-beta.24",
   "description": "",
   "repository": "Nikhil Saraf/magic-components",
   "license": "MIT",
@@ -17,14 +17,7 @@
     "prepublishOnly": "yarn build",
     "start": "pkger"
   },
-  "pkger": {
-    "entries": [
-      {
-        "name": "babel",
-        "target": "node"
-      }
-    ]
-  },
+  "pkger": {},
   "prettier": {},
   "dependencies": {
     "@nksaraf/colors": "^0.0.3",
