--- a/babel/package.json
+++ b/babel/package.json
@@ -1,4 +1,6 @@
 {
   "name": "magic-components/babel",
-  "main": "./babel-plugin-magic.js"
+  "private": true,
+  "main": "../dist/cjs/babel.js",
+  "types": "../dist/types"
 }
